--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ packages = [{include = "informatics_laboratories_10"}]
 
 [tool.poetry.dependencies]
 python = "^3.10"
+django = "^4.1.6"
 
 
 [build-system]
